--- a/Pipfile
+++ b/Pipfile
@@ -1,19 +1,14 @@
-[[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
-name = "pypi"
-
 
 [packages]
-
-
-
-[dev-packages]
-
-pytest = "*"
-django = "*"
-dj-database-url = "*"
-whitenoise = "*"
 gunicorn = "*"
-twine = "*"
+django-heroku = "*"
+django = "==2.0.4"
+djangorestframework = "==3.8.2"
+djangorestframework-jwt = "==1.11.0"
+"django-rest-framework-social-oauth2" = "==1.1.0"
+redis = "==2.10.6"
+
+[requires]
+python_version = "3.6"
