--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-rest-framework-social-oauth2==1.1.0
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==3.2.3
+gunicorn==19.8.0
 idna==2.6
 oauthlib==2.0.7
 pipenv==11.10.1
